--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,18 @@
     <artifactId>maven-parent-pom</artifactId>
     <groupId>org.exoplatform</groupId>
     <version>9-beta-1</version>
-    <relativePath></relativePath>
+    <relativePath />
   </parent>
   <groupId>org.exoplatform.resources</groupId>
   <artifactId>exo-dev-resources</artifactId>
-  <version>1-SNAPSHOT</version>
+  <version>1</version>
   <packaging>pom</packaging>
   <name>Development Resources for eXo projects</name>
   <scm>
     <connection>scm:git:git://github.com/exoplatform/exo-dev-resources.git</connection>
     <developerConnection>scm:git:git@github.com:exoplatform/exo-dev-resources.git</developerConnection>
     <url>http://fisheye.exoplatform.org/browse/projects/exo-dev-resources</url>
+    <tag>1</tag>
   </scm>
   <properties>
     <!-- **************************************** -->
