--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
   </parent>
   <groupId>org.exoplatform.resources</groupId>
   <artifactId>exo-dev-resources</artifactId>
-  <version>1</version>
+  <version>2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Development Resources for eXo projects</name>
   <scm>
     <connection>scm:git:git://github.com/exoplatform/exo-dev-resources.git</connection>
     <developerConnection>scm:git:git@github.com:exoplatform/exo-dev-resources.git</developerConnection>
     <url>http://fisheye.exoplatform.org/browse/projects/exo-dev-resources</url>
-    <tag>1</tag>
+    <tag>HEAD</tag>
   </scm>
   <properties>
     <!-- **************************************** -->
