--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <name>Development Resources for eXo projects</name>
   <modules>
     <module>exo-lgpl-license-resource-bundle</module>
+    <module>exo-agpl-license-resource-bundle</module>
   </modules>
   <scm>
     <connection>scm:git:git://github.com/exoplatform/exo-dev-resources.git</connection>
