--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.exoplatform.resources</groupId>
   <artifactId>exo-dev-resources</artifactId>
-  <version>3-SNAPSHOT</version>
+  <version>3</version>
   <packaging>pom</packaging>
   <name>Development Resources for eXo projects</name>
   <modules>
@@ -19,7 +19,7 @@
   <scm>
     <connection>scm:git:git://github.com/exoplatform/exo-dev-resources.git</connection>
     <developerConnection>scm:git:git@github.com:exoplatform/exo-dev-resources.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>3</tag>
     <url>http://fisheye.exoplatform.org/browse/projects/exo-dev-resources</url>
   </scm>
   <properties>
