--- a/exo-agpl-license-resource-bundle/pom.xml
+++ b/exo-agpl-license-resource-bundle/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>exo-dev-resources</artifactId>
     <groupId>org.exoplatform.resources</groupId>
-    <version>3-SNAPSHOT</version>
+    <version>3</version>
   </parent>
   <artifactId>exo-agpl-license-resource-bundle</artifactId>
   <packaging>jar</packaging>
